--- a/WonderMoviePlayer/WonderMoviePlayer-Info.plist
+++ b/WonderMoviePlayer/WonderMoviePlayer-Info.plist
@@ -29,6 +29,9 @@
 		<string>armv7</string>
 	</array>
 	<key>UISupportedInterfaceOrientations</key>
-	<array/>
+	<array>
+		<string>UIInterfaceOrientationLandscapeLeft</string>
+		<string>UIInterfaceOrientationLandscapeRight</string>
+	</array>
 </dict>
 </plist>
