add statusbar into playerview

--- a/WonderMoviePlayer/WonderMoviePlayer-Info.plist
+++ b/WonderMoviePlayer/WonderMoviePlayer-Info.plist
@@ -30,5 +30,7 @@
 	</array>
 	<key>UISupportedInterfaceOrientations</key>
 	<array/>
+	<key>UIViewControllerBasedStatusBarAppearance</key>
+	<true/>
 </dict>
 </plist>
